add auth on swagger
