# src/app/routes/auth/index.ts
@@ -1,8 +1,0 @@
-import { Router } from 'express';
-import AuthController from '../../module/Auth/Controller';
-
-const newAuthRouter = Router();
-
-newAuthRouter.post('/login', AuthController.login);
-
-export default newAuthRouter;
